--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
     "@types/node": "^12.12.55",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "axios": "^0.20.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "typescript": "^3.7.5"
+    "styled-components": "^5.2.0",
+    "typescript": "^3.7.5",
+    "universal-cookie": "^4.0.3",
+    "universal-cookie-express": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.5",
+    "@types/styled-components": "^5.1.3",
+    "nodemon": "^2.0.4"
   }
 }
